# camera

./: .gitignore  CMakeLists.txt  README.md  Readme.md
OtherLibsLinux/FastvideoSDK/DataSet/Images/: 2k_wild.IRREV.jp2  BPC.pgm  cakePlus.12.ppm  flatField.pgm
OtherLibsLinux/FastvideoSDK/DataSet/LUT/: HsvLut2D.xml  HsvLut3D.xml  lut12.txt  lut3D_inverse_12.cube
OtherLibsLinux/FastvideoSDK/DataSet/Other/: toneCurve.txt
OtherLibsLinux/FastvideoSDK/DataSet/QuantTable/: QuantTable10.txt
OtherLibsLinux/FastvideoSDK/common/: AutoBatch.hpp  BaseAllocator.cpp  BaseAllocator.h  Batch.cpp  Batch.hpp  BatchedQueue.cpp  BatchedQueue.h  DevAllocator.cpp  DevAllocator.h  EnumToStringCustomTransform.cpp  EnumToStringCustomTransform.h  EnumToStringJ2kDecoder.cpp  EnumToStringJ2kDecoder.h  EnumToStringJ2kEncoder.cpp  EnumToStringJ2kEncoder.h  EnumToStringNpp.cpp  EnumToStringNpp.h  EnumToStringNppFilter.cpp  EnumToStringNppFilter.h  EnumToStringNppGeometry.cpp  EnumToStringNppGeometry.h  EnumToStringSdk.cpp  EnumToStringSdk.h  FastAllocator.cpp  FastAllocator.h  FastAllocatorPinned.h  FfmpegPixelFormatConvertion.cpp  FfmpegPixelFormatConvertion.hpp  HelperFFC.cpp  HelperFFC.hpp  HelperRaw.hpp  HelperSDI.hpp  HelperSDICommon.hpp  HelperSDIPacked.hpp  HelperSDIPlanar.hpp  HistogramTraits.hpp  Image.h  JpegCommonDefines.hpp  MallocAllocator.h  SurfaceTraits.cpp  (+5 more)
OtherLibsLinux/FastvideoSDK/common/helper_jpeg/: helper_jpeg.hpp  helper_jpeg_load.cpp  helper_jpeg_store.cpp
OtherLibsLinux/FastvideoSDK/core_samples/: AllocatorManagerInstances.cpp  AsyncFileReader.hpp  AsyncFileWriter.hpp  AsyncProcessor.hpp  AsyncProcessorFactory.hpp  AsyncReaderTaskEnqueuer.hpp  AsyncReaderTaskEnqueuerFactory.hpp  AsyncSingleFileReader.hpp  BayerExifInfo.hpp  CollectionFastAllocator.hpp  DecodeError.hpp  FfcGenerator.cpp  FfcGenerator.hpp  FilesParameterChecker.cpp  FilesParameterChecker.hpp  Filters.cpp  Filters.hpp  GPU.cpp  GPU.hpp  Help.cpp  Help.h  IAsyncFileReader.hpp  IdentifySurface.hpp  ImageFilterValidator.hpp  Init.cpp  Init.hpp  J2kDecoderHelper.cpp  J2kDecoderHelper.h  J2kPrintBoxes.cpp  J2kPrintBoxes.h  LicenseInfoPrinter.hpp  ManagedConstFastAllocator.hpp  ManagedFastAllocator.hpp  MultiThreadInfo.hpp  MultiThreadInfoPrinter.cpp  MultiThreadInfoPrinter.h  PluralSuffix.h  PreloadJ2k.cpp  PreloadJ2k.hpp  PreloadJpeg.cpp  (+13 more)
OtherLibsLinux/FastvideoSDK/core_samples/PugiXml/: pugiconfig.hpp  pugixml.cpp
OtherLibsLinux/FastvideoSDK/core_samples/helper_image/: BayerImageResize.cpp  BayerImageResize.h  DumpImage.cpp  DumpImage.h  bmp.cpp  bmp.hpp  cube.cpp  cube.h  helper_bmp.hpp  helper_bytestream.cpp  helper_bytestream.hpp  helper_common.h  helper_dir.cpp  helper_dir.hpp  helper_exif.cpp  helper_exif.hpp  helper_file.cpp  helper_file.hpp  helper_lut.cpp  helper_lut.hpp  helper_lut_3d.cpp  helper_lut_3d.hpp  helper_pfm.cpp  helper_pfm.hpp  helper_ppm.hpp  helper_quant_table.cpp  helper_quant_table.hpp  helper_raw.hpp  helper_tiff.hpp  helper_yuv.h  ppm.cpp  ppm.h  supported_files.cpp  supported_files.hpp  tiff.cpp  tiff.h
OtherLibsLinux/FastvideoSDK/core_samples/metrics/: SSIM.cpp  SSIM.h  metrics.cpp  metrics.hpp
OtherLibsLinux/FastvideoSDK/core_samples/options/: AffineOptions.cpp  AffineOptions.h  AffineSampleOptions.cpp  AffineSampleOptions.h  BadPixelCorrectionOptions.cpp  BadPixelCorrectionOptions.h  BadPixelCorrectionSampleOptions.cpp  BadPixelCorrectionSampleOptions.h  BaseColorCorrectionOptions.cpp  BaseColorCorrectionOptions.h  BaseColorCorrectionSampleOptions.cpp  BaseColorCorrectionSampleOptions.h  BaseOptions.cpp  BaseOptions.h  BayerBlackShiftOptions.cpp  BayerBlackShiftOptions.h  BayerBlackShiftSampleOptions.cpp  BayerBlackShiftSampleOptions.h  BinningOptions.cpp  BinningOptions.h  BinningSampleOptions.cpp  BinningSampleOptions.h  BitDepthConverterOptions.cpp  BitDepthConverterOptions.h  BitDepthConverterSampleOptions.cpp  BitDepthConverterSampleOptions.h  CameraMultiSampleOptions.cpp  CameraMultiSampleOptions.h  CameraSampleOptions.cpp  CameraSampleOptions.h  CompactFfcOptions.cpp  CompactFfcOptions.h  CompactFfcSampleOptions.cpp  CompactFfcSampleOptions.h  ConverterOptions.cpp  ConverterOptions.h  CropOptions.cpp  CropOptions.h  CropSampleOptions.cpp  CropSampleOptions.h  (+114 more)
OtherLibsLinux/FastvideoSDK/fastvideo_sdk/inc/: fastvideo_sdk_define.h
OtherLibsLinux/FastvideoSDK/libs/ffmpeg/: configure.lgpl.x86_64.sh
OtherLibsLinux/FastvideoSDK/libs/libexif/: how-to-build.txt
OtherLibsLinux/FastvideoSDK/libs/libjpeg-turbo/: How-To Build.Linux.txt
configure/cfg_nodes/: laser_welding.json
docs/: readme.md
src/: common.pri  common_defs.pri  common_unix.pri
src/CameraSample/: AppSettings.h  AsyncControl.cpp  AsyncControl.h  AsyncFileWriter.cpp  AsyncFileWriter.h  AsyncQueue.h  CMakeLists.txt  CameraSample.pro  CpuAllocator.cpp  CpuAllocator.h  Globals.cpp  Globals.h  MJPEGEncoder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RawProcessor.cpp  RawProcessor.h  Resorces.qrc  WeldData.h  fastvideo_common.h  helper_jpeg.hpp  helper_jpeg_store.cpp  main.cpp  ppm.cpp  resource.rc  version.h
src/CameraSample/CUDASupport/: CUDAProcessorBase.cpp  CUDAProcessorBase.h  CUDAProcessorGray.cpp  CUDAProcessorGray.h  CUDAProcessorOptions.h  GPUImage.h  gray12torgb8.cu  gray12torgb8.h
src/CameraSample/Camera/: BaslerCamera.cpp  BaslerCamera.h  FLIRCamera.cpp  FLIRCamera.h  FrameBuffer.cpp  FrameBuffer.h  GPUCameraBase.cpp  GPUCameraBase.h  GeniCamCamera.cpp  GeniCamCamera.h  ImperxCamera.cpp  ImperxCamera.h  LucidCamera.cpp  LucidCamera.h  MIPICamera.cpp  MIPICamera.h  PGMCamera.cpp  PGMCamera.h  XimeaCamera.cpp  XimeaCamera.h
src/CameraSample/RtspServer/: JpegEncoder.cpp  JpegEncoder.h
src/CameraSample/Widgets/: CameraSetupWidget.cpp  CameraSetupWidget.h  CameraSetupWidget.ui  DenoiseController.h  GLImageViewer.cpp  GLImageViewer.h  GtGWidget.cpp  GtGWidget.h  ImageResult.cpp  ImageResult.h  ImageResult.ui  camerastatistics.ui  customlabel.cpp  customlabel.h  test.cpp  test.h  test.ui
src/CameraSample/avfilewriter/: avfilewriter.cpp  avfilewriter.h
(+33 files in other folders)
